--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 
 
 }
+
 .title {
 	width: 500px;
 }
@@ -29,7 +30,10 @@ body {
 .discription { 
 color: #3e66b1;
 text-align: center;
-
+	font: normal normal normal 15px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;;
+ font-style: italic;
+ font-size: 20px;
+ font-family: helvetica;
 }
 
 .discriptiondiv {
@@ -39,6 +43,19 @@ width: 80%;
 background-color:rgba(0, 0, 0, 0.8); 
 height: 100px;
 margin-top: 5%;
+
+}
+
+.whiteboard {
+	display: block;
+float: left;
+width: 40%;
+height: 100px;
+/*margin-top: 5%;*/
+
+}
+
+.discriptionwhite {
 
 
 }
@@ -66,6 +83,10 @@ margin-top: 5%;
 		margin-right: 20%;
 		
 	}
+
+	.inputfield {
+		color: white;
+	}
 }
 
 @media only screen and (max-width: 545px) {
@@ -75,4 +96,4 @@ margin-top: 5%;
 	.title {
 		width: 350px;
 	}
-	}
+}
