--- a/style.css
+++ b/style.css
@@ -1,86 +1,115 @@
 body { 
-  background: url('morningbrew2.jpg') no-repeat center center fixed; 
+  background: url('img/morningbrew2.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 
+}
 
+.content {
+	margin-left: 15px;
 }
 
 .title {
 	width: 500px;
+
 }
 
-#mc_embed_signup {
-	background-color:rgba(0, 0, 0, 0.2); 
+#signup {
 	clear:left; 
 	font:14px Helvetica,Arial,sans-serif;
-	width: 50%;
+	width: 350px;
 	float: right;
-	/*margin-top: 35%;*/
-	 }
-
-.subscribe {
-	font-weight: bolder;
-	color: #3e66b1;
-	font-size: 25px;
+	border-style: solid;
+	padding: 3%;
+	margin-right: 5%;
+	  border-color: rgb(63, 103, 177);
+  border-width: 4.310344827586206px;
+  /*margin-top: 30%;*/
 
 }
+
+#signup input.button {
+  display: block;
+  background-color: rgb(63, 103, 177);
+  width: 350px ;
+  height: 45px;
+  margin: 10px 0 10px 0;
+  min-width: 90px;
+  color: rgb(255, 255, 255);
+border-radius: 2.310344827586206px;
+  border-color: white;
+   border: 1px solid;
+  background-size: auto 100%;
+  padding: 10px 15px;
+    margin-top: 5px;
+  max-width: 100%;
+  white-space: normal;
+    font-family: verdana,geneva,sans-serif;
+    font-size: 16px;
+}
+
+#signup input.button:hover{
+	background-color: #21375f;
+}
+
+input#mce-EMAIL.email {
+	 width: 280px ;
+  margin-bottom: 8%;
+  height: 35px;
+   background-color: rgb(255, 255, 255);
+  color: rgb(96, 94, 94) !important;
+	padding: 2%;
+	  font-size: 14px;
+  font-family: verdana,geneva,sans-serif;
+	 border-radius: 2.310344827586206px;
+    box-shadow: inset 1px 1px 3px 3px rgba(0,0,0,0.12);
+  border: none;
+  vertical-align: middle;
+    display: block;
+}
+
+
+
 .discription { 
 color: #3e66b1;
 text-align: center;
-	font: normal normal normal 15px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;;
+font: normal normal normal 15px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;;
  font-style: italic;
- font-size: 20px;
+ font-size: 18px;
  font-family: helvetica;
 }
 
-.discriptiondiv {
-display: block;
-margin: 0 auto;
-width: 80%;
-background-color:rgba(0, 0, 0, 0.8); 
-height: 100px;
-margin-top: 5%;
-
-}
-
-.whiteboard {
-	display: block;
-float: left;
-width: 40%;
-height: 100px;
-/*margin-top: 5%;*/
-
-}
-
-.discriptionwhite {
 
 
-}
+
 
 @media only screen and (max-width: 617px) {
-#mc_embed_signup {
+#signup {
 	margin-top: 40%;
+
 }
 }
 @media only screen and (min-width: 617px) {
-#mc_embed_signup {
+#signup {
 	margin-top: 20%;
 }
 }
 
 
 @media only screen and (min-width: 910px) {
-	#mc_embed_signup {
+	#signup {
 		margin-top: 10%;
+		
 	}
 }
+
 @media only screen and (max-width: 750px) {
-	#mc_embed_signup {
+	#signup {
 		display: block;
 		margin-right: 20%;
+		/*width: 50%;*/
 		
 	}
 
@@ -90,10 +119,57 @@ height: 100px;
 }
 
 @media only screen and (max-width: 545px) {
-	.discriptiondiv {
-		height: 160px;
-	}
-	.title {
-		width: 350px;
-	}
+#signup {
+margin-left: 10%;
+float: none;
+
 }
+.title {
+	width: 350px;
+	}
+.whiteboard {
+	display: none;
+}
+
+.discriptiondiv {
+display: block;
+margin: 0 auto;
+margin-right: 12%;
+width: 95%;
+background-color:rgba(0, 0, 0, 0.8); 
+height: 160px;
+margin-top: 15%;
+padding: 1px;
+
+}
+.clearbig {
+	display: none;
+}
+
+#signup {
+	width: 320px;	
+	padding: 4%;
+}
+
+
+}
+
+@media only screen and (min-width: 545px) {
+
+.whiteboard {
+display: block;
+float: left;
+width: 40%;
+height: 100px;
+margin-top: 3%;
+
+}
+.discriptiondiv {
+	display: none;
+}
+.clear {
+	display: none;
+}
+
+}
+
