--- a/style.css
+++ b/style.css
@@ -26,8 +26,17 @@ body {
 	margin-right: 5%;
 	  border-color: rgb(63, 103, 177);
   border-width: 4.310344827586206px;
+  margin-top: 110px;
   /*margin-top: 30%;*/
 
+}
+
+.error, .success {
+	color: red;
+	font:16px Helvetica,Arial,sans-serif;
+	font-weight: 500;
+	padding-bottom: 5px;
+	margin-left: 15px;
 }
 
 #signup input.button {
@@ -86,32 +95,32 @@ font: normal normal normal 15px/1.4em din-next-w01-light,din-next-w02-light,din-
 
 
 @media only screen and (max-width: 617px) {
-#signup {
+/*#signup {
 	margin-top: 40%;
 
-}
+}*/
 }
 @media only screen and (min-width: 617px) {
-#signup {
+/*#signup {
 	margin-top: 20%;
-}
+}*/
 }
 
 
 @media only screen and (min-width: 910px) {
-	#signup {
+/*	#signup {
 		margin-top: 10%;
 		
-	}
+	}*/
 }
 
 @media only screen and (max-width: 750px) {
-	#signup {
+/*	#signup {
 		display: block;
 		margin-right: 20%;
-		/*width: 50%;*/
 		
-	}
+		
+	}*/
 
 	.inputfield {
 		color: white;
